--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,6 +1,44 @@
 server {
-    location /browser {
-        alias  /home/liuyao/my_pro/java/browser-app/static;
+    listen 80;
+    server_name fs.com;
+    charset utf-8;
+
+    location / {
+        alias /home/liuyao/my_pro/browser-app/static/fs/;
+        index main.html;
+    }
+    location /html {
+        alias /home/liuyao;
+        autoindex on;
+        autoindex_exact_size off;
+        autoindex_localtime on;
+        autoindex_format html;
+        charset utf-8;
+    }
+    location /api {
+        alias /home/liuyao;
+        autoindex on;
+        autoindex_exact_size off;
+        autoindex_localtime on;
+        autoindex_format json;
+        # default_type application/json;
+        charset utf-8;
+    }
+
+    location /browser-app/ {
+        proxy_pass   http://127.0.0.1:8089/browser-app/;
+        proxy_set_header host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        client_max_body_size 2000m;
+    }
+}
+
+server {
+    listen 80;
+    server_name bs.w.com;
+
+    location / {
+        alias  /home/liuyao/my_pro/java/browser-app/static/;
         index  index.html;
     }
 
