--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 8089
   servlet:
-    context-path: /bs
+    context-path: /bs-api
 #  max-http-header-size: 100MB # 导致请求url的时候内存 超高
 spring:
   mvc:
